apps/app2/deploymet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app2
  namespace: sample-app2
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: sample-app2
  template:
    metadata:
      labels:
        app: sample-app2
    spec:
      containers:
        - name: nginx
          image: nginx:alpine

          ports:
            - containerPort: 80

          command:
            - /bin/sh
            - -c

          args:
            - |
              [...]
