apps/app2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app2
  namespace: sample-app2
spec:
  selector:
    app: sample-app2

  ports:
    - name: http
      port: 80
      targetPort: 80
