apps/app2/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-app2
  namespace: sample-app2
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: treaefik
  hostnames:
    - app2.example.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sample-app2
          port: 80
